2003-03-05  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.texi (Requirements) <AC_CONFIG_FILES>: Files listed
	with AC_CONFIG_FILES are cleaned by `make distclean'.  Don't
	pretend otherwise.
	Reported by Rafael Laboissiere.

2003-03-04  Andreas Buening  <andreas.buening@nexgo.de>

	* lib/mdate-sh: Find out which column of the ls -l output contains
	the month. Do not assume it is at least the fifth column.

2003-02-26  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.texi (Emacs Lisp): Mention that `dist_' can be used.

	* automake.texi (Emacs Lisp): Instruct people to use lisp_DATA
	instead of lisp_LISP when they don't want byte-compilation.
	Don't mention ELCFILES anymore.
	* automake.in (handle_data): Allow lisp_DATA.
	* tests/lisp5.test: New file.
	* tests/Makefile.am (TESTS): Add lisp5.test.

	* automake.in (handle_emacs_lisp): Don't build *.elc files
	if ELCFILES was set empty.
	* tests/lisp4.test: New file.
	* tests/Makefile.am (TESTS): Add lisp4.test.
	Reported by Simon Josefsson.

	* tests/lex3.test, tests/lex5.test: Require flex.
	Reported by Leo Davis.

2003-02-25  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/am/depend2.am (?GENERIC?%EXT%.o, ?GENERIC?%EXT%.obj): Do not
	use the `test -f foo || echo $(srcdir)/` to emulate a VPATH search
	when outputing suffix rules.
	* lib/am/texibuild.am (?GENERIC?%SOURCE_SUFFIX%.dvi)
	(?GENERIC?%SOURCE_SUFFIX%.pdf): Likewise.
	Suggested by Bruno Haible.

	* automake.in (read_am_file): Catch trailing backslashes on last line.
	* tests/backsl3.test: New file.
	* tests/Makefile.am (TESTS): Add backsl3.test.
	Reported by Akim Demaille.

2003-02-24  Alexandre Duret-Lutz  <adl@gnu.org>

	* ChangeLog: Move 2002's entries to ...
	* ChangeLog.02: ... this new file.
	* Makefile.am (EXTRA_DIST): Add ChangeLog.02.

2003-02-24  Richard Dawe  <rich@phekda.freeserve.co.uk>

	* tests/version7.test: Use $sleep to sleep before updating
	the version, to work around timestamp inconsistencies in Windows.
