@@ -1,3 +1,11 @@
+2003-03-06  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* lib/am/depend2.am (?GENERIC?%EXT%.lo): Do not use
+	`test -f foo || echo $(srcdir)/` to emulate a VPATH search when
+	outputing suffix rules.  This follows 2003-02-25's change.
+	* lib/am/lex.am (?GENERIC?%EXT%%DERIVED-EXT%): Likewise.
+	* lib/am/yacc.am (?GENERIC?%EXT%%DERIVED-EXT%): Likewise.
+
 2003-03-05  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* automake.texi (Requirements) <AC_CONFIG_FILES>: Files listed
